# CCGrid2025-artifacts-Let-It-Unthread

./: README.md  setup.sh
instance_pre-overhead/: README.md  generate_code.sh  main_template.c  run_benchmark.py  run_benchmark.sh
scripts/: setup.sh
trampoline-overhead/: README.md  generate_plot.m  generate_plot.py  result.csv  run_benchmark.py
trampoline-overhead/Host-to-Wasm/: Cargo.toml
trampoline-overhead/Host-to-Wasm/src/: embedder.rs
trampoline-overhead/Wasm-to-Host/: Cargo.toml
trampoline-overhead/Wasm-to-Host/src/: Makefile  embedder.rs  main.c
trampoline-overhead/standard_function/: Makefile  main.c
wasi-malloc-benchmarks/: README.md  bench.sh  compile.sh  generate_plot.m  generate_plots.m  run_benchmark.sh
wasi-malloc-benchmarks/bench/: CMakeLists.txt
wasi-malloc-benchmarks/bench/barnes/: code.c  getparam.c
wasi-malloc-benchmarks/bench/bench-malloc/: README  bench-malloc-simple.c  bench-malloc-threads.c
wasi-malloc-benchmarks/bench/espresso/: hack.c
wasi-malloc-benchmarks/bench/larson/: larson.cpp
wasi-malloc-benchmarks/bench/mleak/: mleak.c
wasi-malloc-benchmarks/bench/rptest/: rptest.c  thread.c
wasi-malloc-benchmarks/bench/t-test1/: t-test1.c
wasi-threads-benchmarks/: Makefile  README.md  generate_single_plot.m  plot_multiple.m  run_benchmark.py
wasi-threads-benchmarks/fluidanimate/: pthreads.cpp
wasi-threads-benchmarks/merge-sort/: Makefile
wasi-threads-benchmarks/parallel-grep/: .gitignore  Makefile  ParallelGrep.c  grep_time.ods
wasi-threads-benchmarks/parallel-gzip/: Makefile
wasi-threads-benchmarks/parallel-gzip/native/: Makefile
wasi-threads-benchmarks/parallel-mat-mul/: Makefile  benchmark.c
wasi-threads-benchmarks/parsec/: generate_plot.m  run_benchmark.py
wasi-threads-benchmarks/parsec/blackscholes/: Makefile
wasi-threads-benchmarks/parsec/fluidanimate/: Makefile
wasi-threads-benchmarks/parsec/swaptions/: Makefile
wasi-threads-benchmarks/pthread_create/: Makefile  bench.h  generate_plot.m  main.c  run_benchmark.py
wasi-threads-benchmarks/pthread_create_RSS/: Makefile  run_benchmark.py
wasi-threads-benchmarks/result/: blackscholes.csv  fluidanimate.csv  merge-sort.csv  parallel-grep.csv  parallel-mat-mul.csv  swaptions.csv
wasi-threads-benchmarks/swaptions/: HJM_Securities.cpp  Makefile
wasi-threads-microbenchmarks/: README.md
wasi-threads-microbenchmarks/cforall/: Makefile  README.md  plot_result.m  run_benchmark.py
wasi-threads-microbenchmarks/cforall/barrier/: main.c
wasi-threads-microbenchmarks/cforall/create/: Makefile
wasi-threads-microbenchmarks/cforall/mutex/: Makefile  main.c
wasi-threads-microbenchmarks/cforall/mutexC/: Makefile  main.c
wasi-threads-microbenchmarks/cforall/schedint/: main.c
wasi-threads-microbenchmarks/cforall/semaphore/: Makefile  main.c
wasi-threads-microbenchmarks/cforall/tls/: main.c
wasi-threads-microbenchmarks/cforall/tsd/: main.c
wasi-threads-microbenchmarks/concurrent-software-benchmarks/: generate_plot.m
wasi-threads-microbenchmarks/concurrent-software-benchmarks/src/: fsbench_ok.c
wasi-threads-microbenchmarks/futex_contention/: Makefile  contention.c  generate_plot.m  no_contention.c  run_benchmark.sh
wasi-threads-microbenchmarks/glibc-benches/: Makefile  bench-pthread-lock-base.c  bench-pthread-locks.c  bench-pthread-mutex-lock.c  bench-pthread-mutex-trylock.c  compile.sh  plot_result.m  run_benchmark.py  test-skeleton.c
wasi-threads-microbenchmarks/glibc-benches/include/: libc-symbols.h
wasi-threads-microbenchmarks/glibc-benches/support/: check.h  ignore_stderr.c  json-lib.c  support.h  support_test_main.c  temp_file.h  test-driver.h
wasi-threads-microbenchmarks/pthread_create/: Makefile  run_benchmark.py
wasi-threads-microbenchmarks/pthread_create/result/: create.csv  create_rss.csv
wasi-threads-microbenchmarks/pthread_create_barrier/: main.c  run_benchmark.py
wasi-threads-microbenchmarks/pthread_mutex/: Makefile  get_futex.sh  run_benchmark.py  run_benchmark.sh  run_strace.sh
wasi-threads-microbenchmarks/pthreads_max_rss/: Makefile  plot_result.m  run_benchmark.py
wasi-threads-microbenchmarks/sctbench/: .gitignore
wasi-threads-microbenchmarks/sctbench/chess/: build.py
wasi-threads-microbenchmarks/sctbench/concurrent-software-benchmarks/: compile.py  compile.sh  run_benchmark.py
wasi-threads-microbenchmarks/sctbench/concurrent-software-benchmarks/src/: fsbench_bad.c  indexer_ok.c
